haskell-migration/ebm-mars/build_v8.log
ebm-mars> build (lib + exe) with ghc-9.4.8
Preprocessing library for ebm-mars-0.1.0.0..
Building library for ebm-mars-0.1.0.0..
[ 2 of 11] Compiling EBM.PhaseChange

/home/takeru/git/EBM-on-Mars/haskell-migration/ebm-mars/src/EBM/PhaseChange.hs:57:46: warning: [-Wtype-defaults]
    • Defaulting the type variable ‘a0’ to type ‘Integer’ in the following constraints
        (Integral a0)
          arising from a use of ‘fromIntegral’
          at src/EBM/PhaseChange.hs:57:46-57
        (Num a0)
          arising from the literal ‘0’ at src/EBM/PhaseChange.hs:57:71
        (Enum a0)
          arising from the arithmetic sequence ‘0 .. ’
          at src/EBM/PhaseChange.hs:57:70-74
    • In the second argument of ‘(**)’, namely ‘fromIntegral i’
      In the second argument of ‘(*)’, namely ‘x ** fromIntegral i’
      In the expression: c * x ** fromIntegral i
   |
57 |       tsub = sum $ zipWith (\c i -> c * x ** fromIntegral i) tCoeffs [0..]
   |                                              ^^^^^^^^^^^^

/home/takeru/git/EBM-on-Mars/haskell-migration/ebm-mars/src/EBM/PhaseChange.hs:76:28: warning: [-Wunused-matches]
    Defined but not used: ‘params’
   |
76 | calcTemperatureMass config params state ins dif radi =
   |                            ^^^^^^

/home/takeru/git/EBM-on-Mars/haskell-migration/ebm-mars/src/EBM/PhaseChange.hs:121:33: warning: [-Wunused-matches]
    Defined but not used: ‘params’
    |
121 | calcSlopeTemperatureMass config params state slopeT slopeM ins radi dif =
    |                                 ^^^^^^

/home/takeru/git/EBM-on-Mars/haskell-migration/ebm-mars/src/EBM/PhaseChange.hs:205:30: warning: [-Wname-shadowing]
    This binding for ‘loopCount’ shadows the existing binding
      imported from ‘EBM.Types’ at src/EBM/PhaseChange.hs:20:1-16
    |
205 |         go kouho limHi limLo loopCount
    |                              ^^^^^^^^^
[ 3 of 11] Compiling EBM.Insolation

/home/takeru/git/EBM-on-Mars/haskell-migration/ebm-mars/src/EBM/Insolation.hs:105:34: error:
    Variable not in scope: fmod :: Double -> Double -> Double
    Suggested fix: Perhaps use ‘mod’ (imported from Prelude)
    |
105 |       h = (unTime (season state) `fmod` unTime (dayLength config)) * 2.0 * pi / unTime (dayLength config) - pi
[ 4 of 11] Compiling EBM.IO
    |                                  ^^^^^^

/home/takeru/git/EBM-on-Mars/haskell-migration/ebm-mars/src/EBM/IO.hs:36:19: error:
    • No instance for (V.Unbox String) arising from a use of ‘V.toList’
    • In the first argument of ‘($)’, namely ‘V.toList’
      In the expression:
        V.toList $ V.imap formatDataLine (temperatures state)
      In an equation for ‘dataLines’:
          dataLines = V.toList $ V.imap formatDataLine (temperatures state)
   |
36 |       dataLines = V.toList $ V.imap formatDataLine (temperatures state)
   |                   ^^^^^^^^
[10 of 11] Compiling Verification

/home/takeru/git/EBM-on-Mars/haskell-migration/ebm-mars/src/Verification.hs:96:13: error:
    • Couldn't match expected type ‘Double’ with actual type ‘Int’
    • In the expression: season
      In the expression: (loop, season, pAir, pIce, pRego, tSub)
      In the expression:
        let
          parts
            = map (drop 1 . dropWhile (/= ':')) $ words $ map (\ c -> ...) line
          [loop, season, pAir, pIce, pRego, tSub] = map read parts
        in (loop, season, pAir, pIce, pRego, tSub)
   |
96 |   in (loop, season, pAir, pIce, pRego, tSub)
   |             ^^^^^^

/home/takeru/git/EBM-on-Mars/haskell-migration/ebm-mars/src/Verification.hs:96:21: error:
    • Couldn't match expected type ‘Double’ with actual type ‘Int’
    • In the expression: pAir
      In the expression: (loop, season, pAir, pIce, pRego, tSub)
      In the expression:
        let
          parts
            = map (drop 1 . dropWhile (/= ':')) $ words $ map (\ c -> ...) line
          [loop, season, pAir, pIce, pRego, tSub] = map read parts
        in (loop, season, pAir, pIce, pRego, tSub)
   |
96 |   in (loop, season, pAir, pIce, pRego, tSub)
   |                     ^^^^

/home/takeru/git/EBM-on-Mars/haskell-migration/ebm-mars/src/Verification.hs:96:27: error:
    • Couldn't match expected type ‘Double’ with actual type ‘Int’
    • In the expression: pIce
      In the expression: (loop, season, pAir, pIce, pRego, tSub)
      In the expression:
        let
          parts
            = map (drop 1 . dropWhile (/= ':')) $ words $ map (\ c -> ...) line
          [loop, season, pAir, pIce, pRego, tSub] = map read parts
        in (loop, season, pAir, pIce, pRego, tSub)
   |
96 |   in (loop, season, pAir, pIce, pRego, tSub)
   |                           ^^^^

/home/takeru/git/EBM-on-Mars/haskell-migration/ebm-mars/src/Verification.hs:96:33: error:
    • Couldn't match expected type ‘Double’ with actual type ‘Int’
    • In the expression: pRego
      In the expression: (loop, season, pAir, pIce, pRego, tSub)
      In the expression:
        let
          parts
            = map (drop 1 . dropWhile (/= ':')) $ words $ map (\ c -> ...) line
          [loop, season, pAir, pIce, pRego, tSub] = map read parts
        in (loop, season, pAir, pIce, pRego, tSub)
   |
96 |   in (loop, season, pAir, pIce, pRego, tSub)
   |                                 ^^^^^

/home/takeru/git/EBM-on-Mars/haskell-migration/ebm-mars/src/Verification.hs:96:40: error:
    • Couldn't match expected type ‘Double’ with actual type ‘Int’
    • In the expression: tSub
      In the expression: (loop, season, pAir, pIce, pRego, tSub)
      In the expression:
        let
          parts
            = map (drop 1 . dropWhile (/= ':')) $ words $ map (\ c -> ...) line
          [loop, season, pAir, pIce, pRego, tSub] = map read parts
        in (loop, season, pAir, pIce, pRego, tSub)
   |
96 |   in (loop, season, pAir, pIce, pRego, tSub)
   |                                        ^^^^

/home/takeru/git/EBM-on-Mars/haskell-migration/ebm-mars/src/Verification.hs:115:45: error:
    • Couldn't match expected type ‘Double’ with actual type ‘Int’
    • In the expression: t
      In the expression: (i, t, m, tp, mp, tn, mn)
      In a case alternative:
          [i, t, m, tp, mp, tn, mn] -> (i, t, m, tp, mp, tn, mn)
    |
115 |            [i, t, m, tp, mp, tn, mn] -> (i, t, m, tp, mp, tn, mn)
    |                                             ^

/home/takeru/git/EBM-on-Mars/haskell-migration/ebm-mars/src/Verification.hs:115:48: error:
    • Couldn't match expected type ‘Double’ with actual type ‘Int’
    • In the expression: m
      In the expression: (i, t, m, tp, mp, tn, mn)
      In a case alternative:
          [i, t, m, tp, mp, tn, mn] -> (i, t, m, tp, mp, tn, mn)
    |
115 |            [i, t, m, tp, mp, tn, mn] -> (i, t, m, tp, mp, tn, mn)
    |                                                ^

/home/takeru/git/EBM-on-Mars/haskell-migration/ebm-mars/src/Verification.hs:115:51: error:
    • Couldn't match expected type ‘Double’ with actual type ‘Int’
    • In the expression: tp
      In the expression: (i, t, m, tp, mp, tn, mn)
      In a case alternative:
          [i, t, m, tp, mp, tn, mn] -> (i, t, m, tp, mp, tn, mn)
    |
115 |            [i, t, m, tp, mp, tn, mn] -> (i, t, m, tp, mp, tn, mn)
    |                                                   ^^

/home/takeru/git/EBM-on-Mars/haskell-migration/ebm-mars/src/Verification.hs:115:55: error:
    • Couldn't match expected type ‘Double’ with actual type ‘Int’
    • In the expression: mp
      In the expression: (i, t, m, tp, mp, tn, mn)
      In a case alternative:
          [i, t, m, tp, mp, tn, mn] -> (i, t, m, tp, mp, tn, mn)
    |
115 |            [i, t, m, tp, mp, tn, mn] -> (i, t, m, tp, mp, tn, mn)
    |                                                       ^^

/home/takeru/git/EBM-on-Mars/haskell-migration/ebm-mars/src/Verification.hs:115:59: error:
    • Couldn't match expected type ‘Double’ with actual type ‘Int’
    • In the expression: tn
      In the expression: (i, t, m, tp, mp, tn, mn)
      In a case alternative:
          [i, t, m, tp, mp, tn, mn] -> (i, t, m, tp, mp, tn, mn)
    |
115 |            [i, t, m, tp, mp, tn, mn] -> (i, t, m, tp, mp, tn, mn)
    |                                                           ^^

/home/takeru/git/EBM-on-Mars/haskell-migration/ebm-mars/src/Verification.hs:115:63: error:
    • Couldn't match expected type ‘Double’ with actual type ‘Int’
    • In the expression: mn
      In the expression: (i, t, m, tp, mp, tn, mn)
      In a case alternative:
          [i, t, m, tp, mp, tn, mn] -> (i, t, m, tp, mp, tn, mn)
    |
115 |            [i, t, m, tp, mp, tn, mn] -> (i, t, m, tp, mp, tn, mn)
    |                                                               ^^

Error: [S-7282]
       Stack failed to execute the build plan.
       
       While executing the build plan, Stack encountered the error:
       
       [S-7011]
       While building package ebm-mars-0.1.0.0 (scroll up to its section to see the error) using:
       /home/takeru/.stack/setup-exe-cache/x86_64-linux/Cabal-simple_w2MFVN35_3.8.1.0_ghc-9.4.8 --verbose=1 --builddir=.stack-work/dist/x86_64-linux/ghc-9.4.8 build lib:ebm-mars exe:ebm-mars-exe --ghc-options ""
       Process exited with code: ExitFailure 1 
